                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-08-2006 fixed: mockup with dual ids in anything based on guidialogsettings.
 - 16-08-2006 fixed: mockup with restart video in context menu.
 - 15-08-2006 fixed: [ 1536827 ] Problem w/ keymap.xml
 - 14-08-2006 fixed: xbe's with no title id said was added to the program db each time you listed the bookmark.
 - 14-08-2006 changed: potentially fixed seeking in files larger than 2gb with dvdplayer.
 - 14-08-2006 changed: logging off now leaves master mode.
 - 14-08-2006 fixed: shoutcast sorting sometimes didn't allow user to change order and locked in reverse sorting
 - 14-08-2006 changed: better repeat code for gamepad navigation. speed increases in 3 steps
 - 14-08-2006 fixed: some issues with the login screen (weather not updating, conflict with autoexec.py, excessive wrong code messages).
 - 14-08-2006 fixed: do not allow movie information lookup on a bookmark.
 - 14-08-2006 added: allow user to skip still manually by pressing right or select
 - 14-08-2006 fixed: dvdplayer would not take delay in video queue in in account when skipping stills ( short still might not even display )
 - 13-08-2006 changed: renamed some variables. system.screenshotpath -> pictures.screenshotpath, mymusic.recordingpath -> musicfiles.recordingpath.
 - 13-08-2006 updated: mplayer.dll with support for aac and aac+ streams.
 - 13-08-2006 fixed: listcontrol and listcontrolex would wraparound instead of going to ondown if it where at the max page size of the list
 - 13-08-2006 fixed: forgot to comment out some code in controllist.cpp.
 - 13-08-2006 added: size() method to the ControlList in python. Updated some documentation.