@@ -51,6 +51,8 @@ namespace PYXBMC
 
 	PyObject* PlayListItem_GetDuration(PlayListItem *self, PyObject *key)
 	{
+    if (self->item->GetDuration() == 0)
+      CUtil::LoadMusicTag(self->item);
 		return Py_BuildValue("l", self->item->GetDuration());
 	}
 
